<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/character_imageview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/character_nametv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:paddingStart="8dip"
        android:paddingEnd="8dip"
        android:text="@string/characterfrag_name"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_imageview"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/character_occupationtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:paddingStart="8dip"
        android:paddingEnd="8dip"
        android:text="@string/characterfrag_occupation"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_nametv"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/character_statustv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:paddingStart="8dip"
        android:paddingEnd="8dip"
        android:text="@string/characterfrag_status"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_occupationtv"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/character_nicknametv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:paddingStart="8dip"
        android:paddingEnd="8dip"
        android:text="@string/characterfrag_nickname"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_statustv"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/character_seasonapptv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:paddingStart="8dip"
        android:paddingEnd="8dip"
        android:text="@string/characterfrag_seasonappearance"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_nicknametv"/>



</androidx.constraintlayout.widget.ConstraintLayout>